[package]
name = "apache-synapse-lsp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
chumsky = "0.9.2"
env_logger = "0.10.0"
ropey = "1.6.0"
serde = "1.0.164"
serde_json = "1.0.97"
tokio =  { version = "1.28.2", features = ["full"] }
tower-lsp = "0.19.0"
