[package]
name = "synapse-analyzer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
dashmap = "5.5.1"
env_logger = "0.10.0"
ropey = "1.6.0"
serde = "1.0.164"
serde_json = "1.0.97"
tokio =  { version = "1.28.2", features = ["full"] }
tower-lsp = "0.19.0"

apache-synapse = { path = "../apache-synapse" }
synapse-evaluator = { path = "../synapse-evaluator" }
tree-sitter = "0.20.10"
tree-sitter-apachesynapse = "0.0.3"
