[package]
name = "synapse-evaluator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
tower-lsp = "0.20.0"
tree-sitter = "0.20.10"
tree-sitter-apachesynapse = "0.0.2"

[dev-dependencies]
tree-sitter-rust = "0.20.4"
